--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,11 @@ __pycache__/
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.production
 
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Build outputs
-dist/
-build/
-*.egg-info/
+# Output and temporary directories
+temp/
+output/
 
 # Logs
 *.log
@@ -26,6 +19,38 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# System files
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# OS generated files
 .DS_Store
-Thumbs.db 
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Package managers
+package-lock.json
+yarn.lock
+
+# Build outputs
+dist/
+build/
+*.egg-info/ 
