feat: Integrate OpenRouter API for prompt optimization - Add new API endpoints for optimizing prompts and retrieving available models - Implement prompt optimization functionality in the frontend - Enhance environment configuration with OpenRouter API key - Update package.json with new dependencies for prompt optimization

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@ FAL_KEY=your_fal_api_key_here
 # OpenAI API Configuration (for script generation)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# OpenRouter API Configuration (for prompt optimization)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
