--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Veo3 Short-Form Story Generator - Creates 30-second video stories with consistent characters using Veo 3 API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npx kill-port 3000 && node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
